# displacement_method_of_analysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  anest.cc  build_w_cmake.sh  makefile
test/catch/: testing_catch.cc
test/cmake_arma/: CMakeLists.txt  testing_armadillo.cpp
test/fortran_and_c_interoperability/: hello_function.f95  makefile  program_hello.c
test/gtest/: compile.sh  tests.cc
